--- a/src/app.html
+++ b/src/app.html
@@ -13,7 +13,7 @@
 		<title>Svelte Password Manager</title>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" data-theme="crimson">
+	<body data-sveltekit-preload-data="hover" data-theme="black">
 		<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
 	</body>
 </html>
